--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
-fastapi==0.103.1
-uvicorn[standard]==0.23.2
-sqlalchemy==2.0.21
-pydantic[email]==2.4.2
-pydantic-settings==2.0.3
+fastapi
+uvicorn[standard]
+sqlalchemy
+pydantic[email]
+pydantic-settings
 passlib[bcrypt]
-python-jose[cryptography]==3.3.0
-fastapi-mail==1.4.1
-python-multipart==0.0.6
-google-auth==2.23.2
-httpx==0.25.0
-psycopg2-binary==2.9.7
-alembic==1.12.0
-requests==2.32.5
+python-jose[cryptography]
+fastapi-mail
+python-multipart
+google-auth
+httpx
+psycopg2-binary
+alembic
+requests
