--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,15 @@
 fastapi
-uvicorn[standard]
+uvicorn
 sqlalchemy
-pydantic[email]
+pydantic
 pydantic-settings
-passlib[bcrypt]
 python-jose[cryptography]
+passlib[bcrypt]
 fastapi-mail
-python-multipart
-google-auth
+gunicorn
 httpx
+google-api-python-client
+google-auth
+google-auth-httplib2
 psycopg2-binary
 alembic
-requests
