--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,17 @@
 FROM python:3.10-slim
 
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /code
 
-# Copy the requirements file into the container at /app
-COPY requirements.txt .
+# Copy the requirements file into the container at /code
+COPY ./requirements.txt /code/requirements.txt
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-# Copy the rest of the application's code into the container at /app
-COPY . .
+# Copy the ./app directory from the host to /code/app in the container
+COPY ./app /code/app
 
 # Command to run the application
-# Command to run the application
-# The -b 0.0.0.0:$PORT flag tells Gunicorn to bind to the port Render provides.
-CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:$PORT", "app.main:app"]
+# Uvicorn will run on 0.0.0.0 to be accessible from outside the container
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
