--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,15 @@
 fastapi
 uvicorn
+gunicorn
 sqlalchemy
-pydantic
-pydantic-settings
+psycopg2-binary
 python-jose[cryptography]
 passlib[bcrypt]
-fastapi-mail
-gunicorn
-httpx
-google-api-python-client
+fastapi-mail[pydantic]
+pydantic-settings
 google-auth
-google-auth-httplib2
-psycopg2-binary
-alembic
+google-auth-oauthlib
+requests
+httpx
 python-multipart
+python-decouple
