--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,10 @@
-fastapi
-uvicorn
-gunicorn
-sqlalchemy
-psycopg2-binary
-python-jose[cryptography]
-passlib[bcrypt]
-fastapi-mail[pydantic]
-pydantic-settings
-google-auth
-google-auth-oauthlib
-requests
-httpx
-python-multipart
-python-decouple
+fastapi==0.104.1
+uvicorn==0.23.2
+sqlalchemy==2.0.21
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+pydantic-settings==2.0
+fastapi-mail==1.4.1
+python-dotenv==1.0.0
+httpx==0.25.0
+google-auth==2.23.3
