--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]==0.23.2
 sqlalchemy==2.0.21
 pydantic[email]==2.4.2
 pydantic-settings==2.0.3
-passlib[bcrypt]==1.7.4
+passlib
+bcrypt==3.2.0
 python-jose[cryptography]==3.3.0
 fastapi-mail==1.4.1
 python-multipart==0.0.6
@@ -13,3 +14,4 @@ psycopg2-binary==2.9.7
 alembic==1.12.0
 requests==2.31.0
 uvloop==0.19.0
+
